tools/src/binding/lemon_binding.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of state"][::std::mem::size_of::<state>() - 72usize];
    ["Alignment of state"][::std::mem::align_of::<state>() - 8usize];
    ["Offset of field: state::bp"][::std::mem::offset_of!(state, bp) - 0usize];
    ["Offset of field: state::cfp"][::std::mem::offset_of!(state, cfp) - 8usize];
    ["Offset of field: state::statenum"][::std::mem::offset_of!(state, statenum) - 16usize];
    ["Offset of field: state::ap"][::std::mem::offset_of!(state, ap) - 24usize];
    ["Offset of field: state::nTknAct"][::std::mem::offset_of!(state, nTknAct) - 32usize];
    ["Offset of field: state::nNtAct"][::std::mem::offset_of!(state, nNtAct) - 36usize];
    ["Offset of field: state::iTknOfst"][::std::mem::offset_of!(state, iTknOfst) - 40usize];
    ["Offset of field: state::iNtOfst"][::std::mem::offset_of!(state, iNtOfst) - 44usize];
    ["Offset of field: state::iDfltReduce"][::std::mem::offset_of!(state, iDfltReduce) - 48usize];
    ["Offset of field: state::pDfltReduce"][::std::mem::offset_of!(state, pDfltReduce) - 56usize];
    ["Offset of field: state::autoReduce"][::std::mem::offset_of!(state, autoReduce) - 64usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lemon {
    pub sorted: *mut *mut state,
    pub rule: *mut rule,
    pub startRule: *mut rule,
    pub nstate: ::std::os::raw::c_int,
    pub nxstate: ::std::os::raw::c_int,
    pub nrule: ::std::os::raw::c_int,
    pub nruleWithAction: ::std::os::raw::c_int,
    pub nsymbol: ::std::os::raw::c_int,
    pub nterminal: ::std::os::raw::c_int,
    pub minShiftReduce: ::std::os::raw::c_int,
    pub errAction: ::std::os::raw::c_int,
    pub accAction: ::std::os::raw::c_int,
    pub noAction: ::std::os::raw::c_int,
    pub minReduce: ::std::os::raw::c_int,
    pub maxAction: ::std::os::raw::c_int,
    pub symbols: *mut *mut symbol,
    pub errorcnt: ::std::os::raw::c_int,
    pub errsym: *mut symbol,
    pub wildcard: *mut symbol,
    pub name: *mut ::std::os::raw::c_char,
    pub arg: *mut ::std::os::raw::c_char,
    pub ctx: *mut ::std::os::raw::c_char,
    pub tokentype: *mut ::std::os::raw::c_char,
    pub vartype: *mut ::std::os::raw::c_char,
    pub start: *mut ::std::os::raw::c_char,
    pub stacksize: *mut ::std::os::raw::c_char,
    pub include: *mut ::std::os::raw::c_char,
    pub error: *mut ::std::os::raw::c_char,
    pub overflow: *mut ::std::os::raw::c_char,
    pub failure: *mut ::std::os::raw::c_char,
    pub accept: *mut ::std::os::raw::c_char,
    pub extracode: *mut ::std::os::raw::c_char,
    pub tokendest: *mut ::std::os::raw::c_char,
    pub vardest: *mut ::std::os::raw::c_char,
    pub filename: *mut ::std::os::raw::c_char,
    pub outname: *mut ::std::os::raw::c_char,
    pub tokenprefix: *mut ::std::os::raw::c_char,
    pub reallocFunc: *mut ::std::os::raw::c_char,
    pub freeFunc: *mut ::std::os::raw::c_char,
    pub nconflict: ::std::os::raw::c_int,
    pub nactiontab: ::std::os::raw::c_int,
    pub nlookaheadtab: ::std::os::raw::c_int,
    pub tablesize: ::std::os::raw::c_int,
    pub basisflag: ::std::os::raw::c_int,
    pub printPreprocessed: ::std::os::raw::c_int,
    pub has_fallback: ::std::os::raw::c_int,
    pub nolinenosflag: ::std::os::raw::c_int,
    pub argc: ::std::os::raw::c_int,
    pub argv: *mut *mut ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lemon"][::std::mem::size_of::<lemon>() - 312usize];
    ["Alignment of lemon"][::std::mem::align_of::<lemon>() - 8usize];
    ["Offset of field: lemon::sorted"][::std::mem::offset_of!(lemon, sorted) - 0usize];
    ["Offset of field: lemon::rule"][::std::mem::offset_of!(lemon, rule) - 8usize];
    ["Offset of field: lemon::startRule"][::std::mem::offset_of!(lemon, startRule) - 16usize];
    ["Offset of field: lemon::nstate"][::std::mem::offset_of!(lemon, nstate) - 24usize];
    ["Offset of field: lemon::nxstate"][::std::mem::offset_of!(lemon, nxstate) - 28usize];
    ["Offset of field: lemon::nrule"][::std::mem::offset_of!(lemon, nrule) - 32usize];
    ["Offset of field: lemon::nruleWithAction"]
        [::std::mem::offset_of!(lemon, nruleWithAction) - 36usize];
    ["Offset of field: lemon::nsymbol"][::std::mem::offset_of!(lemon, nsymbol) - 40usize];
    ["Offset of field: lemon::nterminal"][::std::mem::offset_of!(lemon, nterminal) - 44usize];
    ["Offset of field: lemon::minShiftReduce"]
        [::std::mem::offset_of!(lemon, minShiftReduce) - 48usize];
    ["Offset of field: lemon::errAction"][::std::mem::offset_of!(lemon, errAction) - 52usize];
    ["Offset of field: lemon::accAction"][::std::mem::offset_of!(lemon, accAction) - 56usize];
    ["Offset of field: lemon::noAction"][::std::mem::offset_of!(lemon, noAction) - 60usize];
    ["Offset of field: lemon::minReduce"][::std::mem::offset_of!(lemon, minReduce) - 64usize];
    ["Offset of field: lemon::maxAction"][::std::mem::offset_of!(lemon, maxAction) - 68usize];
    ["Offset of field: lemon::symbols"][::std::mem::offset_of!(lemon, symbols) - 72usize];
    ["Offset of field: lemon::errorcnt"][::std::mem::offset_of!(lemon, errorcnt) - 80usize];
    ["Offset of field: lemon::errsym"][::std::mem::offset_of!(lemon, errsym) - 88usize];
    ["Offset of field: lemon::wildcard"][::std::mem::offset_of!(lemon, wildcard) - 96usize];
    ["Offset of field: lemon::name"][::std::mem::offset_of!(lemon, name) - 104usize];
    ["Offset of field: lemon::arg"][::std::mem::offset_of!(lemon, arg) - 112usize];
    ["Offset of field: lemon::ctx"][::std::mem::offset_of!(lemon, ctx) - 120usize];
    ["Offset of field: lemon::tokentype"][::std::mem::offset_of!(lemon, tokentype) - 128usize];
    ["Offset of field: lemon::vartype"][::std::mem::offset_of!(lemon, vartype) - 136usize];
    ["Offset of field: lemon::start"][::std::mem::offset_of!(lemon, start) - 144usize];
    ["Offset of field: lemon::stacksize"][::std::mem::offset_of!(lemon, stacksize) - 152usize];
    ["Offset of field: lemon::include"][::std::mem::offset_of!(lemon, include) - 160usize];
    ["Offset of field: lemon::error"][::std::mem::offset_of!(lemon, error) - 168usize];
    ["Offset of field: lemon::overflow"][::std::mem::offset_of!(lemon, overflow) - 176usize];
    ["Offset of field: lemon::failure"][::std::mem::offset_of!(lemon, failure) - 184usize];
    ["Offset of field: lemon::accept"][::std::mem::offset_of!(lemon, accept) - 192usize];
    ["Offset of field: lemon::extracode"][::std::mem::offset_of!(lemon, extracode) - 200usize];
    ["Offset of field: lemon::tokendest"][::std::mem::offset_of!(lemon, tokendest) - 208usize];
    ["Offset of field: lemon::vardest"][::std::mem::offset_of!(lemon, vardest) - 216usize];
    ["Offset of field: lemon::filename"][::std::mem::offset_of!(lemon, filename) - 224usize];
    ["Offset of field: lemon::outname"][::std::mem::offset_of!(lemon, outname) - 232usize];
    ["Offset of field: lemon::tokenprefix"][::std::mem::offset_of!(lemon, tokenprefix) - 240usize];
    ["Offset of field: lemon::reallocFunc"][::std::mem::offset_of!(lemon, reallocFunc) - 248usize];
    ["Offset of field: lemon::freeFunc"][::std::mem::offset_of!(lemon, freeFunc) - 256usize];
    ["Offset of field: lemon::nconflict"][::std::mem::offset_of!(lemon, nconflict) - 264usize];
    ["Offset of field: lemon::nactiontab"][::std::mem::offset_of!(lemon, nactiontab) - 268usize];
    ["Offset of field: lemon::nlookaheadtab"]
        [::std::mem::offset_of!(lemon, nlookaheadtab) - 272usize];
    ["Offset of field: lemon::tablesize"][::std::mem::offset_of!(lemon, tablesize) - 276usize];
    ["Offset of field: lemon::basisflag"][::std::mem::offset_of!(lemon, basisflag) - 280usize];
    ["Offset of field: lemon::printPreprocessed"]
        [::std::mem::offset_of!(lemon, printPreprocessed) - 284usize];
    ["Offset of field: lemon::has_fallback"]
        [::std::mem::offset_of!(lemon, has_fallback) - 288usize];
    ["Offset of field: lemon::nolinenosflag"]
        [::std::mem::offset_of!(lemon, nolinenosflag) - 292usize];
    ["Offset of field: lemon::argc"][::std::mem::offset_of!(lemon, argc) - 296usize];
    ["Offset of field: lemon::argv"][::std::mem::offset_of!(lemon, argv) - 304usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct s_x2 {
    pub size: ::std::os::raw::c_int,
    pub count: ::std::os::raw::c_int,
    pub tbl: *mut s_x2node,
    pub ht: *mut *mut s_x2node,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of s_x2"][::std::mem::size_of::<s_x2>() - 24usize];
    ["Alignment of s_x2"][::std::mem::align_of::<s_x2>() - 8usize];
    ["Offset of field: s_x2::size"][::std::mem::offset_of!(s_x2, size) - 0usize];
    ["Offset of field: s_x2::count"][::std::mem::offset_of!(s_x2, count) - 4usize];
    ["Offset of field: s_x2::tbl"][::std::mem::offset_of!(s_x2, tbl) - 8usize];
    ["Offset of field: s_x2::ht"][::std::mem::offset_of!(s_x2, ht) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct s_x2node {
    pub data: *mut symbol,
    pub key: *const ::std::os::raw::c_char,
    pub next: *mut s_x2node,
    pub from: *mut *mut s_x2node,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of s_x2node"][::std::mem::size_of::<s_x2node>() - 32usize];
    ["Alignment of s_x2node"][::std::mem::align_of::<s_x2node>() - 8usize];
    ["Offset of field: s_x2node::data"][::std::mem::offset_of!(s_x2node, data) - 0usize];
    ["Offset of field: s_x2node::key"][::std::mem::offset_of!(s_x2node, key) - 8usize];
    ["Offset of field: s_x2node::next"][::std::mem::offset_of!(s_x2node, next) - 16usize];
    ["Offset of field: s_x2node::from"][::std::mem::offset_of!(s_x2node, from) - 24usize];
};
pub type x2node = s_x2node;
unsafe extern "C" {
    pub static mut x2a: *mut s_x2;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct plink {
    pub _address: u8,
}
